@@ -1,4 +1,5 @@
 HEAD
+	+ Make dump_exceptions key work also for mason exceptions
 	+ Pass HTTP_PROXY system environment variable to CGIs as they are
 	  used in Zentyal modules
 	+ Waiting for Zentyal ready page check is more robust now
